set(HEADER_FILES
    tracker/arpeggiator.hpp
    tracker/automation.hpp
    tracker/automation_location.hpp
    tracker/column.hpp
    tracker/column_settings.hpp
    effects/auto_panner_effect.hpp
    devices/bass_synth_device.hpp
    effects/delay_effect.hpp
    devices/device.hpp
    devices/device_factory.hpp
    devices/drum_synth_constants.hpp
    devices/drum_synth_device.hpp
    effects/effect.hpp
    effects/effect_factory.hpp
    effects/effect_rack.hpp
    effects/high_pass_filter_effect.hpp
    effects/low_pass_filter_effect.hpp
    effects/panner_effect.hpp
    effects/panning_effect.hpp
    devices/sampler_device.hpp
    devices/synth_device.hpp
    devices/synth_presets.hpp
    devices/wavetable_synth_device.hpp
    effects/volume_effect.hpp
    dsp/adsr_envelope.hpp
    dsp/all_pass_filter.hpp
    dsp/lufs_meter.hpp
    dsp/cascaded_svf.hpp
    dsp/clipper_effect.hpp
    dsp/compressor_effect.hpp
    dsp/diode_ladder_filter.hpp
    dsp/drum/clap_engine.hpp
    dsp/drum/crash_engine.hpp
    dsp/drum/drum_engine.hpp
    dsp/drum/hihat_engine.hpp
    dsp/drum/kick_engine.hpp
    dsp/drum/ride_engine.hpp
    dsp/drum/snare_engine.hpp
    dsp/drum/tom_engine.hpp
    dsp/dsp_component.hpp
    dsp/eq_8_band_parametric_effect.hpp
    dsp/lfo.hpp
    dsp/multi_engine.hpp
    dsp/oversampler.hpp
    dsp/poly_blep_oscillator.hpp
    dsp/reverb_effect.hpp
    dsp/svf_filter.hpp
    dsp/wavetable_oscillator.hpp
    tracker/event.hpp
    tracker/event_data.hpp
    tracker/instrument.hpp
    tracker/instrument_settings.hpp
    tracker/interpolator.hpp
    tracker/line.hpp
    tracker/line_event.hpp
    midi/midi_address.hpp
    midi/midi_cc_automation.hpp
    midi/midi_cc_data.hpp
    midi/midi_cc_setting.hpp
    midi/midi_import_mode.hpp
    midi/midi_note_data.hpp
    tracker/mixer_unit.hpp
    tracker/modulation.hpp
    tracker/note_data.hpp
    tracker/note_data_manipulator.hpp
    tracker/parameter.hpp
    tracker/parameter_container.hpp
    tracker/pattern.hpp
    midi/pitch_bend_automation.hpp
    midi/pitch_bend_data.hpp
    tracker/play_order.hpp
    tracker/side_chain_settings.hpp
    tracker/song.hpp
    tracker/track.hpp
)

set(SOURCE_FILES
    tracker/arpeggiator.cpp
    tracker/automation.cpp
    tracker/automation_location.cpp
    tracker/column.cpp
    tracker/column_settings.cpp
    effects/auto_panner_effect.cpp
    devices/bass_synth_device.cpp
    effects/delay_effect.cpp
    devices/device.cpp
    devices/device_factory.cpp
    devices/device_registration.cpp
    devices/drum_synth_constants.cpp
    devices/drum_synth_device.cpp
    effects/effect.cpp
    effects/effect_factory.cpp
    effects/effect_rack.cpp
    effects/high_pass_filter_effect.cpp
    effects/low_pass_filter_effect.cpp
    effects/panner_effect.cpp
    effects/panning_effect.cpp
    devices/sampler_device.cpp
    devices/synth_device.cpp
    devices/synth_presets.cpp
    devices/wavetable_synth_device.cpp
    effects/volume_effect.cpp
    dsp/adsr_envelope.cpp
    dsp/all_pass_filter.cpp
    dsp/lufs_meter.cpp
    dsp/cascaded_svf.cpp
    dsp/chorus_effect.cpp
    dsp/clipper_effect.cpp
    dsp/compressor_effect.cpp
    dsp/diode_ladder_filter.cpp
    dsp/drum/clap_engine.cpp
    dsp/drum/crash_engine.cpp
    dsp/drum/hihat_engine.cpp
    dsp/drum/kick_engine.cpp
    dsp/drum/ride_engine.cpp
    dsp/drum/snare_engine.cpp
    dsp/drum/tom_engine.cpp
    dsp/dsp_component.cpp
    dsp/eq_8_band_parametric_effect.cpp
    dsp/lfo.cpp
    dsp/multi_engine.cpp
    dsp/oversampler.cpp
    dsp/poly_blep_oscillator.cpp
    dsp/reverb_effect.cpp
    dsp/svf_filter.cpp
    dsp/wavetable.cpp
    dsp/wavetable_oscillator.cpp
    tracker/event.cpp
    tracker/event_data.cpp
    tracker/instrument.cpp
    tracker/instrument_settings.cpp
    tracker/interpolator.cpp
    tracker/line.cpp
    tracker/line_event.cpp
    midi/midi_address.cpp
    midi/midi_cc_automation.cpp
    midi/midi_cc_data.cpp
    midi/midi_cc_setting.cpp
    midi/midi_note_data.cpp
    tracker/mixer_unit.cpp
    tracker/note_data.cpp
    tracker/note_data_manipulator.cpp
    tracker/parameter.cpp
    tracker/parameter_container.cpp
    tracker/pattern.cpp
    midi/pitch_bend_automation.cpp
    midi/pitch_bend_data.cpp
    tracker/play_order.cpp
    tracker/song.cpp
    tracker/track.cpp
)

add_library(${DomainLibName} STATIC ${HEADER_FILES} ${SOURCE_FILES})

target_include_directories(${DomainLibName} PUBLIC ..)

target_link_libraries(${DomainLibName} PUBLIC ${CommonLibName} Qt6::Core Qt6::Quick)
