set(UNIT_TEST_BASE_DIR ${CMAKE_BINARY_DIR}/unit_tests)
add_subdirectory(automation_service_test)
add_subdirectory(editor_service_test)
add_subdirectory(midi_cc_automations_model_test)
add_subdirectory(midi_cc_selection_model_test)
add_subdirectory(mixer_service_test)
add_subdirectory(note_converter_test)
add_subdirectory(pitch_bend_automations_model_test)
add_subdirectory(play_order_test)
add_subdirectory(selection_service_test)
add_subdirectory(side_chain_service_test)
add_subdirectory(song_test)
add_subdirectory(track_settings_model_test)
add_subdirectory(column_settings_model_test)
add_subdirectory(midi_exporter_test)
add_subdirectory(player_worker_test)
