set(UNIT_TEST_BASE_DIR ${CMAKE_BINARY_DIR}/unit_tests)
add_subdirectory(application_service_test)
add_subdirectory(arpeggiator_test)
add_subdirectory(audio_file_io_test)
add_subdirectory(auto_panner_test)
add_subdirectory(automation_service_test)
add_subdirectory(bass_synth_test)
add_subdirectory(bass_synth_controller_test)
add_subdirectory(column_settings_model_test)
add_subdirectory(device_rack_controller_test)
add_subdirectory(drum_synth_test)
add_subdirectory(drum_synth_controller_test)
add_subdirectory(editor_service_test)
add_subdirectory(editor_service_undo_test)
add_subdirectory(effect_rack_test)
add_subdirectory(effect_rack_controller_test)
add_subdirectory(effects_test)
add_subdirectory(event_selection_model_test)
add_subdirectory(keyboard_service_test)
add_subdirectory(knob_controller_test)
add_subdirectory(midi_cc_automations_model_test)
add_subdirectory(midi_cc_selection_model_test)
add_subdirectory(midi_exporter_test)
add_subdirectory(midi_importer_test)
add_subdirectory(midi_settings_model_test)
add_subdirectory(mixer_service_test)
add_subdirectory(note_column_line_container_helper_test)
add_subdirectory(note_column_model_handler_test)
add_subdirectory(note_column_model_test)
add_subdirectory(note_converter_test)
add_subdirectory(oversampler_test)
add_subdirectory(panner_test)
add_subdirectory(parameter_mapper_test)
add_subdirectory(pitch_bend_automations_model_test)
add_subdirectory(play_order_test)
add_subdirectory(player_worker_test)
add_subdirectory(poly_blep_oscillator_test)
add_subdirectory(property_service_test)
add_subdirectory(real_time_worker_pool_test)
add_subdirectory(recent_files_model_test)
add_subdirectory(render_service_test)
add_subdirectory(rendering_test)
add_subdirectory(sampler_test)
add_subdirectory(sampler_controller_test)
add_subdirectory(selection_service_test)
add_subdirectory(side_chain_service_test)
add_subdirectory(song_test)
add_subdirectory(synth_test)
add_subdirectory(synth_controller_test)
add_subdirectory(track_settings_model_test)
add_subdirectory(xml_serialization_test)
