include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${RTAUDIO_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/src/contrib/SimpleLogger/src)
set(NAME application_service_test)
set(SRC
    ${NAME}.cpp
    ${NAME}.hpp
    ../../application/command/automation_command.cpp
    ../../application/command/composite_command.cpp
    ../../application/command/note_edit_command.cpp
    ../../application/command/undo_stack.cpp
    ../../application/instrument_request.cpp
    ../../application/note_converter.cpp
    ../../application/position.hpp
    ../../application/service/application_service.cpp
    ../../application/service/audio_service.cpp
    ../../application/service/audio_worker.cpp
    ../../application/service/automation_service.cpp
    ../../application/service/copy_manager.cpp
    ../../application/service/device_service.cpp
    ../../application/service/editor_service.cpp
    ../../application/service/jack_service.cpp
    ../../application/service/keyboard_service.cpp
    ../../application/service/midi_service.cpp
    ../../application/service/midi_worker.cpp
    ../../application/service/midi_worker_in.cpp
    ../../application/service/midi_worker_out.cpp
    ../../application/service/mixer_service.cpp
    ../../application/service/player_service.cpp
    ../../application/service/player_worker.cpp
    ../../application/service/property_service.cpp
    ../../application/service/random_service.cpp
    ../../application/service/recent_files_manager.cpp
    ../../application/service/selection_service.cpp
    ../../application/service/settings_service.cpp
    ../../application/service/side_chain_service.cpp
    ../../application/state_machine.cpp
    ../../common/constants.cpp
    ../../common/utils.cpp
    ../../common/waveform_generator.cpp
    ../../domain/arpeggiator.cpp
    ../../domain/automation.cpp
    ../../domain/automation_location.cpp
    ../../domain/column.cpp
    ../../domain/column_settings.cpp
    ../../domain/devices/device.cpp
    ../../domain/devices/high_pass_filter_effect.cpp
    ../../domain/devices/low_pass_filter_effect.cpp
    ../../domain/devices/panning_effect.cpp
    ../../domain/devices/sampler_device.cpp
    ../../domain/devices/volume_effect.cpp
    ../../domain/event.cpp
    ../../domain/event_data.cpp
    ../../domain/instrument.cpp
    ../../domain/instrument_settings.cpp
    ../../domain/interpolator.cpp
    ../../domain/line.cpp
    ../../domain/line_event.cpp
    ../../domain/midi_address.cpp
    ../../domain/midi_cc_automation.cpp
    ../../domain/midi_cc_data.cpp
    ../../domain/midi_cc_setting.cpp
    ../../domain/midi_note_data.cpp
    ../../domain/mixer_unit.cpp
    ../../domain/note_data.cpp
    ../../domain/note_data_manipulator.cpp
    ../../domain/pattern.cpp
    ../../domain/pitch_bend_automation.cpp
    ../../domain/pitch_bend_data.cpp
    ../../domain/play_order.cpp
    ../../domain/song.cpp
    ../../domain/track.cpp
    ../../infra/audio/audio_engine.cpp
    ../../infra/audio/audio_file_recorder.cpp
    ../../infra/audio/audio_file_streamer.cpp
    ../../infra/audio/audio_player.cpp
    ../../infra/audio/audio_recorder.cpp
    ../../infra/audio/backend/sndfile_reader.cpp
    ../../infra/audio/implementation/jack/audio_player_jack.cpp
    ../../infra/audio/implementation/jack/audio_recorder_jack.cpp
    ../../infra/audio/implementation/librtaudio/audio_player_rt_audio.cpp
    ../../infra/audio/implementation/librtaudio/audio_recorder_rt_audio.cpp
    ../../infra/midi/implementation/librtmidi/midi_in_rt_midi.cpp
    ../../infra/midi/implementation/librtmidi/midi_out_rt_midi.cpp
    ../../infra/midi/midi_backend.cpp
    ../../infra/midi/midi_backend_in.cpp
    ../../infra/midi/midi_backend_out.cpp
    ../../infra/midi/midi_cc_mapping.cpp
    ../../infra/midi/midi_port.cpp
    ../../infra/settings.cpp
)
qt_add_executable(${NAME} ${SRC})
set_target_properties(${NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${UNIT_TEST_BASE_DIR})
add_test(${NAME} ${UNIT_TEST_BASE_DIR}/${NAME})
target_link_libraries(${NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Test Qt${QT_VERSION_MAJOR}::Gui ${RTMIDI_LIBRARIES} SimpleLogger ${JACK_LIBRARIES} ${SNDFILE_LIBRARIES} ${RTAUDIO_LIBRARIES})
if(JACK_FOUND)
  target_compile_definitions(${NAME} PRIVATE HAVE_JACK)
endif()
